--- a/real_code/frontend/www/css/main.css
+++ b/real_code/frontend/www/css/main.css
@@ -23,10 +23,14 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 1rem;
+    width: 80%;
+    margin: auto;
 }
 
 header a {
     text-decoration: none;
+    font-weight: bold;
+    color: black;
 }
 
 body {
@@ -34,8 +38,7 @@ body {
 }
 
 #header-title {
-    font-size: 24px;
-    font-weight: bold;
+    font-size: 30px;
 }
 
 nav {
@@ -43,14 +46,58 @@ nav {
 }
 
 nav a {
-    padding: 1rem;
-    font-size: 18px;
+    padding: 1rem 2rem;
+    font-size: 24px;
 }
 
 .motto {
-    text-align: center;
     width: 50%;
-    margin: 1rem auto;
+    margin: 15rem 0 15rem 15%;
+    font-size: 60px;
+}
+
+.about {
+    font-size: 18px;
+}
+
+.about h2 {
+    margin-left: 10%;
+    font-weight: normal;
+    text-decoration: underline;
+}
+
+.expertise-container {
+    width: 80%;
+    margin: auto;
+    margin-bottom: 2rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 15rem;
+}
+
+.expertise-left {
+    font-size: 45px;
+    font-weight: bold;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    margin: 1rem 0;
+    min-width: fit-content;
+}
+
+.expertise-left p {
+    margin: 0;
+}
+
+.expertise-right {
+    font-size: 20px;
+}
+
+.projects-container,
+.process {
+    margin: 0 10%;
+    margin-bottom: 2rem;
 }
 
 .home-container {
